<?xml version="1.0" encoding="utf-8"?>
<menu 
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView" />
	
   <item
        android:id="@+id/search"
        android:icon="@drawable/ic_pro"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView" />
		
	<item
        android:icon="@drawable/ic_more"
        android:title="@string/filter"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/menu_sort_asc"
                android:orderInCategory="0"
                android:title="@string/a_z"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_sort_dec"
                android:orderInCategory="1"
                android:title="@string/z_a"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_newest_first"
                android:orderInCategory="1"
                android:title="@string/newest_first"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_oldest_first"
                android:orderInCategory="1"
                android:title="@string/oldest_first"
                app:showAsAction="never" />

        </menu>

    </item>


</menu>